[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/square_fill_8x8.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/square_outline_8x8.png" type="Texture" id=2]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://prefabs/ui/slider.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/roboto/Roboto-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/roboto/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[node name="Slider" type="Control"]
margin_right = 256.0
margin_bottom = 64.0
rect_min_size = Vector2( 320, 64 )
size_flags_horizontal = 0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 60.0
mouse_filter = 0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="HBoxContainer" parent="Margin/Container"]
margin_right = 312.0
margin_bottom = 29.0
mouse_filter = 0
custom_constants/separation = 0

[node name="Des" type="Label" parent="Margin/Container/TopContainer"]
margin_right = 156.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Name"
valign = 2

[node name="Value" type="Label" parent="Margin/Container/TopContainer"]
margin_left = 156.0
margin_right = 312.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "50%"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="Margin/Container"]
margin_top = 33.0
margin_right = 312.0
margin_bottom = 56.0
focus_mode = 2
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
rounded = true
texture_under = ExtResource( 1 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.14902, 0.14902, 0.14902, 1 )
tint_over = Color( 0.14902, 0.14902, 0.14902, 1 )
tint_progress = Color( 0.733333, 0.733333, 0.733333, 1 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1

[connection signal="gui_input" from="Margin/Container/Progress" to="." method="_on_TextureProgress_gui_input"]
[connection signal="mouse_entered" from="Margin/Container/Progress" to="." method="_on_TextureProgress_mouse_entered"]
[connection signal="mouse_exited" from="Margin/Container/Progress" to="." method="_on_TextureProgress_mouse_exited"]
